# eggs

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE.md  README.md  alembic.ini  hello.py  pyproject.toml  test_api.py  test_db.py  test_renamed_tables.py
.beads/: issues.jsonl
.devcontainer/: Dockerfile  devcontainer.json
.opencode/skills/beads-sprint/: SKILL.md
alembic/: env.py
alembic/versions/: 3a4dbb9b2f7a_fix_migration_for_is_in_cart_flag.py  40bfde2921de_add_items_table.py  46c90b9a775a_add_is_in_cart_boolean_flag_to_items_.py  66d2453749af_initial_migration.py  abaa41c6b81f_rename_listmodel_table_to_lists_and_.py
eggs/: __init__.py  api.py  db.py  db.py.bak  main.py
frontend/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
frontend/public/: manifest.json
frontend/src/: App.js  App.test.tsx  App.tsx  exceptions.ts  setupTests.ts
frontend/src/components/: AddItemForm.test.tsx  AddItemForm.tsx  Item.test.tsx  Item.tsx  ItemList.js  ItemList.test.js  ItemList.test.tsx  ItemList.tsx  ListHeader.js  ListHeader.tsx
frontend/src/services/: shoppingListService.js  shoppingListService.test.ts  shoppingListService.ts
tests/: db.py  test_api.py  test_main.py
