[project]
name = "eggs"
version = "0.1.0"
description = "A simple CLI tool"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Erik van Zijst", email = "erik.van.zijst@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlmodel>=0.0.14",
]

[project.scripts]
eggs = "eggs.api:main"

[project.urls]
Homepage = "https://github.com/erikvanzijst/eggs"
Repository = "https://github.com/erikvanzijst/eggs"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "black>=21.0",
    "flake8>=3.8",
    "httpx>=0.28.1",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["eggs*"]
exclude = ["alembic*", "tests*"]
